Fix table cell spacing

--- a/styles-client/generic.less
+++ b/styles-client/generic.less
@@ -59,3 +59,9 @@ span.critic.comment {
   }
   position: relative;
 }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  background-color: transparent;
+}
